syntax = "proto3";

package csd.app.hello;

service GreetingService {
  rpc helloEN(GreetingRequest) returns (GreetingResponse);
  rpc helloTR(GreetingRequest) returns (GreetingResponse);
}

message GreetingRequest {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  bool married = 4;
}

message GreetingResponse {
  string message = 1;
  string maritalStatus = 2;
}


